# PersonalAcadamicAgent

./: .gitignore  README.md  dev.md  pyproject.toml
docs/: intuition.md  plan_structure_aware_rag.md
saved_content/: usenix_25_cycle1.json  usenix_security_24_fall.json  usenix_security_24_summer.json
scripts/: distiller.py  generate_synthetic_htmls.py  grpo_collect_selectors_cli.py  run_full_evaluation.py
selectors/: usenix.json
src/: __init__.py  coding_agent.py  logging_config.py  main.py  models.py  settings.py  settings_template.py  utils.py
src/agents/: collector.py  coordinator.py  html_parse_agent.py  searcher.py  summary.py
src/evaluation/: README.md  __init__.py  comparison_runner.py  config.py  pipeline.py  runner.py  schemas.py
src/evaluation/annotation/: __init__.py  paper_annotator.py  prompts.py  section_annotator.py
src/evaluation/data_preparation/: __init__.py  chunk_processor.py  collection_builder.py  data_exporter.py  pdf_downloader.py  pipeline.py  prompts.py
src/evaluation/prompts/: l3_evaluation.py
src/parser/: HTMLSelector.py  pdf_parser.py
src/prompts/: agentic_searcher.md  collector.md  common.md  coordinator.md  html_parse_agent.md  rag_query_refiner.md  searcher.md  template.py
src/rag/: README.md  chunker.py  feature_extractor.py  milvus.py  pdf_loader.py  pgvector.py  retriever.py
src/tools/: common_tools.py
src/utils/: __init__.py  selector_verifier.py  trace_logger.py
tests/: test_agentic_searcher.py  test_milvus_search.py  test_ollama_embedding.py  test_parse_pdf.py  test_parse_pdf_html.py
(+5 files in other folders)
