[project]
name = "02-paper-collecter-and-rag-searcher"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4==4.14.2",
    "ddgs==9.6.1",
    "dotenv>=0.9.9",
    "jinja2>=3.1.6",
    "langchain==1.0.1",
    "langchain-community==0.4",
    "langchain-google-genai==3.0.0",
    "langchain-huggingface>=1.0.1",
    "langchain-openai>=1.0.2",
    "milvus-lite>=2.5.1",
    "pymilvus==2.6.3",
    "sentence-transformers>=5.1.2",
]
