[project]
name = "02-paper-collecter-and-rag-searcher"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4==4.14.2",
    "ddgs==9.6.1",
    "dotenv>=0.9.9",
    "faker>=24.0.0",
    "jinja2>=3.1.6",
    "loguru>=0.7.3",
    "langchain==1.0.1",
    "langchain-community==0.4",
    "langchain-google-genai==3.0.0",
    "langchain-huggingface>=1.0.1",
    "langchain-ollama>=1.0.0",
    "langchain-openai>=1.0.2",
    "milvus-lite>=2.5.1",
    "pymilvus==2.6.3",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.0.0",
    "sentence-transformers>=5.1.2",
    "pdfplumber>=0.11.8",
    "pypdf>=6.4.0",
    "pymupdf>=1.26.6",
]
